zaypal ekan dabbi

--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
     <h3></h3>
     <h3></h3>
     <h3></h3>
+    <div class="container">
+      <nav>
+        <span></span>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">portfolio</a></li>
+          <li><a href="#">comment</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
