--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#">about</a></li>
           <li><a href="#">portfolio</a></li>
           <li><a href="#">comment</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="#">conflict</a></li>
         </ul>
       </nav>
     </div>
