--- a/index.html
+++ b/index.html
@@ -5,32 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <div class="container">
-      <nav>
-        <span></span>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">comment</a></li>
-          <li><a href="#">conflict</a></li>
-        </ul>
-      </nav>
+    <div class="hero">
+      <div class="hero_img">
+        <img src="img/Unknown.jpeg" alt="" />
+      </div>
+      <div class="hero_info">
+        <h1>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
+          ducimus at beatae repellendus assumenda voluptatibus vitae! Corrupti
+          ea esse veritatis.
+        </h1>
+      </div>
     </div>
   </body>
 </html>
