--- a/index.html
+++ b/index.html
@@ -5,32 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
   </head>
   <body>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
     <div class="container">
-      <nav>
-        <span></span>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">comment</a></li>
-          <li><a href="#">conflict</a></li>
-        </ul>
-      </nav>
+      <footer>
+        <div class="footer-one">
+          <div class="footer-content">
+            <p class="logo">LOGO</p>
+            <p>SOLOGAN COMPANY</p>
+          </div>
+          <div class="footer-content">
+            <p>SERVICES</p>
+            <p>SOLOGAN COMPANY</p>
+            <p>SOLOGAN COMPANY</p>
+            <p>SOLOGAN COMPANY</p>
+          </div>
+          <div class="footer-content">
+            <p>SERVICES</p>
+            <p>SOLOGAN COMPANY</p>
+            <p></p>
+            <p>SOLOGAN COMPANY</p>
+            <p>SOLOGAN COMPANY</p>
+          </div>
+          <div class="footer-content">
+            <p>SERVICES</p>
+            <p>SOLOGAN COMPANY</p>
+          </div>
+          <div class="footer-content">
+            <p>SERVICES</p>
+            <p>SOLOGAN COMPANY</p>
+            <p>SOLOGAN COMPANY</p>
+            <p>SOLOGAN COMPANY</p>
+            <p></p>
+            <p>SOLOGAN COMPANY</p>
+          </div>
+        </div>
+        <hr>
+        <div class="footer-two"></div>
+      </footer>
     </div>
   </body>
 </html>
