modern html css and images

--- a/index.html
+++ b/index.html
@@ -5,32 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <div class="container">
-      <nav>
-        <span></span>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">comment</a></li>
-          <li><a href="#">conflict</a></li>
-        </ul>
-      </nav>
+    <!-- book section -->
+    <div class="book-section">
+      <div class="container">
+        <div class="head19">
+          <p>B</p>
+          <p>o</p>
+          <p>o</p>
+          <p>k</p>
+          <p>n</p>
+          <p>o</p>
+          <p>w</p>
+        </div>
+        <div class="box1">
+          <div class="box11">
+            <img src="./images/book-img.svg" alt="books" />
+          </div>
+          <div class="box12">
+            <form action="guests">
+              <label for="place">Where To</label>
+              <input
+                type="text"
+                name="place"
+                id="place"
+                placeholder="place name"
+              />
+              <label for="how">How Many</label>
+              <input
+                type="number"
+                name="how"
+                id="how"
+                placeholder="Number of guests"
+              />
+              <label for="date">Arriwals</label>
+              <input
+                type="date"
+                name="date"
+                id="date"
+                placeholder="dd//mm/yyyy"
+              />
+              <label for="date1">Leaving</label>
+              <input
+                type="date"
+                name="date"
+                id="date"
+                placeholder="dd/mm/yyyy"
+              />
+              <button type="submit">Book Now</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- /book section -->
   </body>
 </html>
