--- a/index.html
+++ b/index.html
@@ -4,33 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
-    <div class="container">
-      <nav>
-        <span></span>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">comment</a></li>
-          <li><a href="#">conflict</a></li>
-        </ul>
-      </nav>
+    <div class="navbar">
+      <div class="left-logo">
+        <img class="magic-logo" src="img/magic-logo.jpg" alt="logo">
+        <input type="text" placeholder="Search here">
+        <i class="fas fa-search"></i>
+      </div>
+      <div class="menu">
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="# ">About us</a>
+      </div>
+      <div class="logos">
+        
+      </div>
     </div>
   </body>
 </html>
